Working Poc that pumps openspints hardware data to webscoket.

--- a/files/app.config
+++ b/files/app.config
@@ -1,4 +1,6 @@
 [
+{roller, [{bind_address, "127.0.0.1"}, {port, 8080}, {document_root, "site/www"}]},
+{tempile, [{root, "site/templates"}, {extension, ".html"}, {vars, [{}]}]},
  %% SASL config
  {sasl, [
          {sasl_error_logger, {file, "log/sasl-error.log"}},
