--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,8 @@
 
 {deps_dir, ["apps"]}.
 
-{deps, [{misultin, "0.6.1", {git, "git://github.com/ostinelli/misultin.git", "HEAD"}}]}.
+{deps, [{misultin, "0.6.1", {git, "git://github.com/ostinelli/misultin.git", "HEAD"}},
+	{tempile, "1", {git, "git://github.com/russelldb/tempile.git -b erlydtl", "HEAD"}}]}.
 
 {sub_dirs, ["apps/misultin", "apps/roller", "rel"]}.
 
