Added some skeleton for race tests.

--- a/rebar.config
+++ b/rebar.config
@@ -3,9 +3,11 @@
 {deps_dir, ["apps"]}.
 
 {deps, [{misultin, "0.6.1", {git, "git://github.com/ostinelli/misultin.git", "HEAD"}},
-	{tempile, "1", {git, "git://github.com/russelldb/tempile.git -b erlydtl", "HEAD"}}]}.
+	{tempile, "1", {git, "git://github.com/russelldb/tempile.git -b erlydtl", "HEAD"}},
+	{meck, "0.1", {git, "http://github.com/russelldb/meck.git", "HEAD"}}
+	]}.
 
-{sub_dirs, ["apps/misultin", "apps/roller", "rel"]}.
+{sub_dirs, ["apps/misultin", "apps/roller", "apps/meck", "rel"]}.
 
 {cover_enabled, true}.
 
