--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 
 {deps, [{misultin, "0.6.1", {git, "git://github.com/ostinelli/misultin.git", "HEAD"}},
 	{tempile, "1", {git, "git://github.com/russelldb/tempile.git -b erlydtl", "HEAD"}},
-	{meck, "0.1", {git, "http://github.com/russelldb/meck.git", "HEAD"}}
+	{meck, "0.1", {git, "http://github.com/eproxus/meck.git", "HEAD"}}
 	]}.
 
 {sub_dirs, ["apps/misultin", "apps/roller", "apps/meck", "rel"]}.
