--- a/rebar.config
+++ b/rebar.config
@@ -4,10 +4,10 @@
 
 {deps, [{misultin, "0.6.1", {git, "git://github.com/ostinelli/misultin.git", "HEAD"}},
 	{tempile, "1", {git, "git://github.com/russelldb/tempile.git -b erlydtl", "HEAD"}},
-	{meck, "0.1", {git, "http://github.com/eproxus/meck.git", "HEAD"}}
+	{meck, "0.1", {git, "git://github.com/eproxus/meck.git", "HEAD"}}
 	]}.
 
-{sub_dirs, ["apps/misultin", "apps/roller", "apps/meck", "rel"]}.
+{sub_dirs, ["apps/misultin", "apps/tempile", "apps/roller", "apps/meck", "apps/erlydtl", "rel"]}.
 
 {cover_enabled, true}.
 
