--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 
 {deps_dir, ["apps"]}.
 
-{deps, [{misultin, "0.6.2", {git, "git://github.com/ostinelli/misultin.git", "HEAD"}},
+{deps, [{misultin, "0.6.2", {git, "git://github.com/ostinelli/misultin.git", "misultin-0.6.2"}},
 	{tempile, "1", {git, "git://github.com/russelldb/tempile.git -b erlydtl", "HEAD"}},
 	{meck, "0.1", {git, "git://github.com/eproxus/meck.git", "HEAD"}},
 	{bitcask, "1.1.5", {git, "git://github.com/basho/bitcask.git", "HEAD"}}
